# scripts

./: .gitignore  .pyre_configuration  README.md  __main__.py  hint_collection.py  main.py  make_flapy_csv.py  pyproject.toml  pyproject.toml.bak  requirements.txt  setup.py  utils.py
collection/: __main__.py
collection/common/: storage.py
common/: __init__.py  _apply_type_annotations.py  _helper.py  _traversal.py  annotations.py  ast_helper.py  factory.py  matchers.py  metadata.py  output.py  schemas.py  storage.py  transformers.py  transformersdead.py  visitors.py
common/metadata/: __init__.py  anno4inst.py  keyword_scopage.py
context/: cli.py  features.py  visitors.py
dataset/: __init__.py  cli.py  manytypes4py.py
diff/: __main__.py  cli.py
experiments/: inferred.py  pipeline.py  predictions.py  probas.py  pyreinfer.ipynb
experiments/00datasets/: bt4py-context-analysis.ipynb  bt4py.ipynb  cdt4py.ipynb  cdt4py_statistics.ipynb  cdt4py_troved.ipynb
experiments/01a tt5exp-performance/: hit4py.ipynb  hitt5.ipynb  hitypernoml.ipynb  hitypilus.ipynb  type4py.ipynb  typet5.ipynb  typilus.ipynb
experiments/01b artifacts/: hit4py.ipynb
experiments/01performance/: type4py.ipynb  typet5.ipynb  typilus.ipynb
experiments/02 Overlap/: Dynamic-Overlap.ipynb  ML-Overlap.ipynb  Static-Overlap.ipynb
experiments/02 logregr/: logregr.ipynb
experiments/03CR/: Majority.ipynb  Selective.ipynb  improvements.ipynb
experiments/api/: __init__.py  config.py  filters.py  mappers.py  tasks.py
harness/: analyses.py  cli.py
hintdiff/: __init__.py  accuracy.py  cli.py  coverage.py  hintstat.py
hyper/: _common.sh  bt4py.sh  context.sh  update_bt4py.sh  update_bt4py_hit4py.sh  update_bt4py_hitt5.sh  update_bt4py_hitypernoml.sh  update_bt4py_tt5.sh  update_bt4py_typilus.sh  update_context.sh
hyper/hit4py/: parameters.sh  returns.sh  variables.sh
hyper/hitypewriter/: parameters.sh  returns.sh  variables.sh
hyper/hitypilus/: parameters.sh  returns.sh  variables.sh
hyper/monkeytype/: parameters.sh  returns.sh
hyper/pyreinfer/: parameters.sh  returns.sh
hyper/pyrequery/: variables.sh
hyper/t4py/: parameters.sh  returns.sh  variables.sh
hyper/tt5/: parameters.sh  returns.sh  variables.sh
hyper/tt5exp/: hitt5.sh  hity4py.sh  hitypernoml.sh  hitypilus.sh  t4py.sh  tt5.sh  typilus.sh
hyper/typewriter/: parameters.sh  returns.sh  variables.sh
hyper/typilus/: parameters.sh  returns.sh  variables.sh
icr/: _factory.py  cli.py  insertion.py
icr/inference/: __init__.py  _adaptors.py  _base.py  hity.py  mypy.py  pyre.py  pyreinfer.py  pyrequery.py  type4py.py  typewriter.py
icr/resolution/: __init__.py  _base.py  argumentation.py  decisiontheory.py  delegation.py  voting.py
infer/: cli.py  insertion.py  lower_transforms.py  qname_transforms.py  removal.py
infer/inference/: __init__.py  _adaptors.py  _base.py  _hityper.py  _utils.py  hit4py.py  hity.py  hitypewriter.py  hitypilus.py  monkey.py  mypy.py  pyreinfer.py  pyrequery.py  t4py.py  tt5.py  type4py.py  typewriter.py  typilus.py
logregr/: __init__.py  cli.py  visualisations.ipynb
resources/: Dockerfile  run.sh
scripts/: utils.py
scripts/common/: __init__.py  _traversal.py  annotations.py  ast_helper.py  extending.py  output.py  schemas.py  storage.py  transformers.py  visitors.py
scripts/context/: __init__.py  cli.py  features.py  visitors.py
scripts/dataset/: cli.py  normalisation.py  type_alias.py
scripts/domain/: cli.py
scripts/hintdiff/: accuracy.py  cli.py  coverage.py  hintstat.py
scripts/icr/: cli.py
scripts/infer/: cli.py  insertion.py  lower_transforms.py  qname_transforms.py  structure.py
scripts/logregr/: cli.py
scripts/mt_copy/: cli.py
scripts/symbols/: collector.py
scripts/tt5exp/: cli.py  remover.py
slurm/: _common.sh  _env.sh  generator.py
slurm/envs/: envinstaller.sh  installer.sh
slurm/mypy/: parameters.sh  returns.sh  variables.sh
slurm/pyreinfer/: parameters.sh  returns.sh  variables.sh
slurm/pyrequery/: parameters.sh  returns.sh  variables.sh
slurm/scripts/: _common.sh  _env.sh  generator.py  pyreinfer-parameters.sh  pyreinfer-returns.sh  (+1 more)
srcdiff/: cli.py
symbols/: __init__.py  cli.py  collector.py
tests/: conftest.py
(+151 files in other folders)
