[tool.poetry]
authors = ["Benjamin Sparks <benjamin.sparks@protonmail.com>"]
description = "Collection of scripts for evaluating performance of type annotation processes for Python"
license = "MIT"
name = "scripts"
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"
libcst = {git = "https://github.com/multidim-typeinf4py/LibCST.git"}
pandas = "^1.5.2"
pandera = {extras = ["mypy"], version = "^0.13.4"}
mypy = "^0.991"
pyre-check = "^0.9.17"
pydantic = "^1.10.2"

typewriter = {git = "https://github.com/multidim-typeinf4py/typewriter.git", branch = "feature/dltinproj"}
types-requests = "^2.28.11.5"
hityper = {git = "https://github.com/multidim-typeinf4py/HiTyper.git"}

[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"
mypy = "^0.991"
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
pandas-stubs = "<=1.4.3"

[tool.mypy]
plugins = ["pandera.mypy"]
exclude = ["tests/resources/", "icr/inference"]

[tool.black]
line-length = 100

[tool.flake8]
max-line-length = 100

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
