[tool.poetry]
authors = ["Benjamin Sparks <benjamin.sparks@protonmail.com>"]
description = "Collection of scripts for evaluating performance of type annotation processes for Python"
license = "MIT"
name = "scripts"
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
click = "^8.1.3"
libcst = {git = "https://github.com/multidim-typeinf4py/LibCST.git", branch = "main"}
mypy = "^0.991"
pandas = "1.5.2"
pandera = {extras = ["mypy"], version = "^0.13.4"}
pydantic = "^1.10.2"
pyre-check = "^0.9.17"
python = "^3.11"

hityper = {git = "https://github.com/multidim-typeinf4py/HiTyper.git"}
hypothesis = "^6.64.0"
libsa4py = "^0.3.0"
networkx = "^3.0"
types-requests = "^2.28.11.5"
typewriter = {git = "https://github.com/multidim-typeinf4py/typewriter.git", branch = "feature/dltinproj"}
ray = "^2.3.1"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
flake8 = "^5.0.4"
mypy = "^0.991"
pandas-stubs = "<=1.4.3"
pytest = "^7.2.0"
pytest-cov = "^4.0.0"

[tool.mypy]
exclude = ["tests/resources/", "icr/inference"]
plugins = ["pandera.mypy"]

[tool.black]
line-length = 100

[tool.ruff]
max-line-length = 100

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
