[tool.poetry]
authors = ["Benjamin Sparks <benjamin.sparks@protonmail.com>"]
description = "Collection of scripts for evaluating performance of type annotation processes for Python"
license = "MIT"
name = "scripts"
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
click = "^8.1.3"
libcst = {git = "https://github.com/multidim-typeinf4py/LibCST.git", branch = "main"}
mypy = "^0.991"
pandas = "1.5.2"
pandera = {extras = ["mypy"], version = "^0.13.4"}
pydantic = "^1.10.2"
pyre-check = "^0.9.17"
python = ">=3.10,<3.12"

datasets = "^2.12.0"
dateparser = "^1.1.8"
huggingface-hub = "^0.14.1"
hypothesis = "^6.64.0"
ipywidgets = "^8.0.6"
libsa4py = "^0.4.0"
networkx = "^3.0"
pytorch-lightning = "^2.0.2"
ray = "^2.3.1"
termcolor = "^2.3.0"
transformers = "4.21.3"
types-requests = "^2.28.11.5"

onnxruntime-gpu = "^1.15.0"
onnxruntime = "^1.15.0"
numpy = "=1.24.3"
scikit-learn = "=1.2.2"


hityper = {git = "https://github.com/multidim-typeinf4py/HiTyper.git"}
type4py = {git = "https://github.com/multidim-typeinf4py/type4py.git", branch = "compat/fixes"}
typet5 = {git = "https://github.com/multidim-typeinf4py/TypeT5.git"}
typewriter = {git = "https://github.com/multidim-typeinf4py/typewriter.git", branch = "feature/dltinproj"}
typilus = {git = "https://github.com/multidim-typeinf4py/typilus.git"}

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
flake8 = "^5.0.4"
mypy = "^0.991"
pandas-stubs = "<=1.4.3"
pytest = "^7.2.0"
pytest-cov = "^4.0.0"

[tool.mypy]
exclude = ["tests/resources/", "icr/inference"]
plugins = ["pandera.mypy"]

[tool.pytest.ini_options]
log_cli = true

[tool.black]
line-length = 100

[tool.ruff]
max-line-length = 100

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
